# REDItools3

./: pyproject.toml  ruff.toml
.github/workflows/: mypy.yaml
reditools/: __init__.py  __main__.py  alignment_file.py  alignment_manager.py  compiled_position.py  compiled_reads.py  constants.py  fasta_file.py  file_utils.py  logger.py  reditools.py  region.py  region_collection.py  rtannotater.py  rtindexer.py  splicing_file.py
reditools/analyze/: parse_args.py  run_combo_proc.py  setup_rtools_dna.py  write_combo_results.py
reditools/rtchecks/: __init__.py  check_column_min_edits.py  check_max_alts.py  check_specific_alts.py  rtchecks.py
reditools/tools/analyze/: check_dead.py  concat_output.py  main.py  monitor.py  parse_args.py  redi_pool.py  redi_thread.py  region_args.py  run_proc.py  setup_alignment_manager.py  setup_rtools.py  setup_rtools_dna.py  temp_file_manager.py  write_combo_results.py  write_results.py
reditools/tools/analyze/parse_args/: bounded_types.py  json_args.py  parse_args.py
reditools/tools/analyze/rtchecks/: __init__.py  check_column_edit_frequency.py  check_column_min_edits.py  check_exclusions.py  check_max_editing_nucleotides.py  check_min_read_depth.py  check_target_positions.py  check_variants.py  rtchecks.py
reditools/tools/annotate/: main.py  parse_args.py
reditools/tools/find_repeats/: __init__.py  main.py
reditools/tools/index/: main.py  parse_args.py
test/: __init__.py  __main__.py  aligner.py  alignment_file.py  alignment_manager.py  compiled_position.py  compiled_reads.py  fasta_file.py  file_utils.py  reditools.py  region.py  region_collection.py  rtannotater.py  rtchecks.py  rtindexer.py  rtresult.py  sam_gen.py  splicing_file.py
test/analyze/: parse_args.py  parse_args_utils.py  region_args.py  rtchecks.py  setup_alignment_manager.py  setup_rtools.py  write_results.py
