[build-system]
requires = ["setuptools>=68.2.2", "pysam>=0.22.0"]
build-backend = "setuptools.build_meta"

[project]
name = "REDItools3"
version = "v3.6"
license = "GPL-3.0-or-later"
authors = [
  { name="Ernesto Picardi" },
  { name="Adam Handen", email="adam.handen@gmail.com" },
]
readme = "README.md"
dependencies = [
    "pysam>=0.22.0",
]
keywords = ["bioinformatics", "RNA", "RNA-editing"]
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3.7",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.urls]
homepage = "https://github.com/BioinfoUNIBA/REDItools3"
repository = "https://github.com/BioinfoUNIBA/REDItools3"
issues = "https://github.com/BioinfoUNIBA/REDItools3/issues"
