[build-system]
requires = ["setuptools>=68.2.2", "pysam>=0.22.0"]
build-backend = "setuptools.build_meta"

[project]
name = "REDItools3"
version = "v3.7"
license = "GPL-3.0-or-later"
authors = [
  { name="Ernesto Picardi" },
  { name="Adam Handen", email="adam.handen@gmail.com" },
]
readme = "README.md"
dependencies = [
    "pysam>=0.22.0",
]
keywords = ["bioinformatics", "RNA", "RNA-editing"]
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3.7",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.urls]
homepage = "https://github.com/BioinfoUNIBA/REDItools3"
repository = "https://github.com/BioinfoUNIBA/REDItools3"
issues = "https://github.com/BioinfoUNIBA/REDItools3/issues"

[project.optional-dependencies]
wps = ["flake8", "wemake-python-styleguide"]

[tool.isort]
multi_line_output=3
include_trailing_comma=true

[tool.ruff]
line-length = 80

[tool.ruff.lint]
select = ["ALL"]
external = ["WPS"]
ignore = [
    "RUF100", "PYI034", "PLR0913", "FBT001", "FBT002", "D203", "D213",
    "INP001", "S311", "I",
]

[tool.ruff.lint.per-file-ignores]
"test/__main__.py" = ["F401"]
"**/__init__.py" = ["F401"]
"test/**py" = ["PT", "SLF001", "FLY002"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.mypy]
disallow_untyped_calls = true
disallow_untyped_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
